public/css/merchant-portal.css
/* ... */
.billing-plans .plans .plan .card .plan-body {
  min-height: 160px;
  padding: 20px 0 10px;
  margin: 0;
}

.billing-plans .plans .plan .card .plan-body p{
  font-size: 12px;
}

.billing-plans .plans .plan .card .plan-footer {
  padding: 16px 0 0;
  font-weight: 600;
  font-size: 17px;
  border-top: 1px solid #252525;
}

.plan-status {
  /* width: 73px; */
  height: 23px;
  border-radius: 11.5px;
  background: #f0f0f0;
  font-size: 11px;
  padding: 5px 7px;
  text-transform: capitalize;
}

.plan-status.expired {
  background: #ffe8e9;
  color: #E51B24;
}

.plan-status.active {
  background: #CDFAF4;
  color: #15A580;
}

.plan-status.draft {
  background: #fff;
  color: #8A8A8A;
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.16);
}
.plan-status.isPending {
  background: #FFEBD6;
  color: #F49A40;
}

.plan-status.review {
  background: #DBE2FF;
  color: #5677FC;
}

.plan-status.inactive {
  background: #5A5959;
  color: #F0F0F0;
}

#reward-list-page {
  padding-top: 30px;
}

#reward-list-page .add-reward-button {
  float: right;
}

#reward-list-page .reward-search {
  /* font-size: 15px !important; */
  /* width: 500px; */
}

#reward-list-page .search-container {
  display: block;
  position: relative;
}

#reward-list-page .search-container i {
  position: absolute;
  bottom: 10px;
  left: 20px;
}

.reward-back-button {
  color: #e6e6e6;
  /* margin-right: 10px; */
  font-size: 18px;
  display: inline-block;
}

.reward-back-button:hover {
  color: inherit;
  cursor: pointer;
}

/*** the button group styling for selecting applicable days ***/
#applicable-days-container .select-group, #applicable-days-container .day-group {
  max-width: 550px;
  width: 100%;
  display: flex;
  align-items: stretch;
}

#applicable-days-container .button-group {
  display: inline-block;
  flex: 1;
}

#applicable-days-container .button-group button i {
  display: none;
}

#applicable-days-container .button-group button {
  background-color: #252525;
}

#applicable-days-container .button-group input[type="radio"]:checked ~ button,
#applicable-days-container .button-group input[type="checkbox"]:checked ~ button {
  background-color: #5cb85c;
  color: #fff;
}

#applicable-days-container .button-group input[type="radio"]:checked ~ button i,
#applicable-days-container .button-group input[type="checkbox"]:checked ~ button i {
  display: inline-block;
  color: #fff;
  margin-left: 5px;
}

#applicable-days-container .button-group input[type="radio"],
#applicable-days-container .button-group input[type="checkbox"] {
  display: none;
}

#applicable-days-container button {
  display: inline-block;
  margin-bottom: 0;
  font-weight: 400;
  text-align: center;
  vertical-align: middle;
  cursor: pointer;
  border: 1px solid transparent;
  padding: 6px 12px;
  font-size: 14px;
  border: 1px solid #5cb85c;
  color: #5cb85c;
  outline: none;
  width: 100%;
}

#applicable-days-container button.active/* , #applicable-days-container button:hover */ {
  background-color: #5cb85c;
  color: #fff;
}

#applicable-days-container .day-group .button-group:not(:first-of-type) button,
#applicable-days-container .select-group .button-group:not(:first-of-type) button {
  border-left: 0;
}

#applicable-days-container .day-group .button-group button:hover,
#applicable-days-container .select-group .button-group button:hover,
#applicable-days-container .day-group .button-group input[type="checkbox"]:checked ~ button {
  border-right-color: #5cb85c;
}

#applicable-days-container div.select-group {
  margin-bottom: 20px;
}
/*** end of the button group styling for selecting applicable days ***/

#verification-page .customer-info {
  display: inline-block;
  width: 100%;
}

#verification-page .customer-info p:first-of-type {
  margin: 0;
  font-weight: 300;
  color: #94989E;
}

#verification-page .customer-info p:last-of-type {
  font-size: 20px;
}

#verification-page .empty h2 {
  margin-bottom: 20px;
  font-size: 20px;
  color: #94989E;
}

#verification-page .empty h2 i {
  font-size: 19px;
  margin-right: 10px;
}

#verification-page .coupin-search {
  width: 500px;
}

#verify .redeem-section {
  margin-bottom: 15px;
}

#verify .redeem-section .redeem-button {
  float:right; margin-right:10px;
}

.capitalize {
  text-transform: capitalize;
}

.mobile-logo {
  height: 25px;
}

/*** custom naira icon ***/
.cu-naira::before {
 content: '\20A6'
}
/*** end of custom naira icon ***/

.shorten {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.break-word {
  overflow-wrap: break-word;
}

@media (min-width: 320px) and (max-width: 786px) {
  .merchant-space {
    padding: 10px;
  }

  #verification-page .coupin-search {
    width: 216px;
  }

  #verify .redeem-section .redeem-button {
    float:unset;
    /* margin-right:10px; */
  }

  .shorten {
    max-width: 250px;
  }

  #verify .reward-list .customer-info p:nth-of-type(2) {
    font-size: 14px;
  }

  #verify .reward-list .customer-info p:nth-of-type(2) {
    font-size: 17px;
  }

  #verify .reward-list.selected {
    background-color: rgb(226, 249, 245);
    color: inherit;
  }
}

.section-header-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 30px;
}

.section-header-container .section-headers {
  margin-bottom: 0;
}

.datepicker button {
  border: 0;
}

@media (max-width: 1024px) {
  .merchant-space {
    margin-top: 60px;
  }


  #profile .logo-box {
    height: 100px;
    width: 100px;
    top: 140px;
  }
}

@media (max-width: 992px) {
  #reward-list-page .add-reward-button {
    float: left;
    margin-top: 30px;
  }

  .billing-plans .plans {
    flex-wrap: wrap;
  }
  
  .billing-plans .plans .plan {
    margin-bottom: 20px;
    width: 100%;
  }

  .billing-plans .plans .plan .plan-body {
    min-height: unset;
  }
}

@media (max-width: 768px) {
  .quick-info:not(:first-child) {
    margin-left: 10px;
  }
}
/* ... */

